--- a/html/day12_exe01.html
+++ b/html/day12_exe01.html
@@ -33,6 +33,7 @@
         <li>ABOUT</li>
         <li>NEWS</li>
         <li>PORTFOLIO</li>
+        <li style="display: none;"></li>
         <li><i class="fas fa-bars"></i></li>
       </ul>
     </div>
