아코디언 확인하고 조금 수정함

--- a/html/day38_accordion.html
+++ b/html/day38_accordion.html
@@ -19,9 +19,8 @@
       text-transform: uppercase;
       transition: all 0.5s;
     }
-    ul>li:nth-child(odd).show+li{
+    ul>li.show+li{
       height: 120px;
-      
     }
     ul>li:nth-child(even){
       font-size: 14px;
