day44_exe02.html은 답안

--- a/html/day44_exe01.html
+++ b/html/day44_exe01.html
@@ -39,7 +39,7 @@
                 <div class="artGroup">
                     <h3>segment title</h3>
                     <ul class="texts">
-                        <li class="show"><i class="xi-plus-min"></i> description</li>
+                        <li class="show"><i class="xi-minus-min"></i> description</li>
                         <li>
                             <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, quisquam. Dignissimos provident excepturi, voluptatem, nisi eos amet eveniet ratione distinctio iusto, cumque id. Aspernatur nobis, nemo consectetur beatae suscipit repudiandae.
