--- a/html/day44_exe02.html
+++ b/html/day44_exe02.html
@@ -145,7 +145,7 @@
         }
     </style>
     <script>
-        $(function(){//
+        $(function(){//html 전체 DOM을 로딩
             var thumbImg = $('.thumb li');
             var thumbView = $('.thumbView');
             var acoLi = $('.aco li');
@@ -159,7 +159,7 @@
                 $(this).addClass('show');
                 acoLi.even().find('span:eq(0)').text('+');
                 $(this).find('span:eq(0)').text('-');
-                //find는 하위의 모든 요소 
+                //find는 하위의 모든 요소 eq 함수를 사용하면 함수끼리 충돌하여 acoLi의 eq(index)의 span을 선택한다. (자바스크립트는 더 빠른 것부터 처리한다.) :eq(index)의 형태로 사용하는 것이 좋다.
             });
             btn.eq(0).click(function(){
                 acoLi.even().find('span:eq(1)').text($(this).text());
