offset()이용 스크롤 이동

--- a/html/day62_exe01.html
+++ b/html/day62_exe01.html
@@ -9,18 +9,10 @@
     <link rel="stylesheet" href="./css/xeicon.min.css">
     <link rel="stylesheet" href="./css/day62_exe01.min.css">
     <script src="./js/jquery-3.6.0.min.js"></script>
+    <script src="./js/common.js"></script>
     <script>
         $(function(){
-            $('.hdr').load('./inc/header.html', function(){
-                $(this).find('h1').click(function(){
-                    alert('!!');
-                });
-            });
-            $('.ftr').load('./inc/footer.html');
-
-            // $('.hdr').on('click', 'h1', function(){
-            //     alert('!!');
-            // });
+            
         });
     </script>
 </head>
